<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Pizza Place</string>

    <string name="name">Name</string>

    <string name="toppings">Choose Toppings</string>
    <string name="olive">Black Olives</string>
    <string name="pepper">Green Bell Pepper</string>
    <string name="onion">Red Onions</string>
    <string name="tomato">Cherry Tomatoes</string>

    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">1</string>

    <string name="order">Place Order</string>
    <string name="summary">View Summary</string>

    <!--Name format for the order summary. It will be shown in the format of "Name: Karthik"  where "Karthik" is the user's name. [CHAR LIMIT=NONE]-->
    <string name="order_summary_name">Name: <xliff:g example="Avni" id="name">%s</xliff:g></string>
    <!--display "yes" as an answer to any question-->
    <string name="yes">Yes</string>
    <!--display "no" as an answer to any question-->
    <string name="no">No</string>
    <!-- Whipped Cream for the order summary. Displays in the format "Add Whipped Cream?Yes"[CHAR LIMIT=NONE]-->
    <string name="order_summary_olive">Add Black Olives? <xliff:g example="yes" id="addOlive">%s</xliff:g></string>
    <string name="order_summary_pepper">Add Green Bell Pepper? <xliff:g example="yes" id="addPepper">%s</xliff:g></string>
    <string name="order_summary_onion">Add Red Onions? <xliff:g example="yes" id="addOnion">%s</xliff:g></string>
    <string name="order_summary_tomato">Add Cherry Tomatoes? <xliff:g example="yes" id="addTomato">%s</xliff:g></string>

    <string name="order_summary_quantity">Quantity: <xliff:g example="1" id="quantity">%d</xliff:g></string>
    <string name="order_summary_total_price">Total: $ <xliff:g example="10" id="price">%.2f</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="too_many_pizzas">Please select less than 50 pizzas.</string>
    <string name="too_little_pizza">Please select at least one pizza.</string>
</resources>