<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.karthik.myorder.MainActivity">

        <EditText
            android:id="@+id/user_input"
            android:hint="Enter your name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:inputType="textCapWords"/>
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"/>
        <CheckBox
            android:id="@+id/olive_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/olive"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/pepper_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/pepper"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/onion_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/onion"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/tomato_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomato"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="16sp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"/>
        </LinearLayout>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:onClick="selectDate"
                android:text="Select Date"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:onClick="placeOrder"
                android:text="Order"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="viewSummary"
                android:text="Summary"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>

